Fix horizontal scroll styling issue with navigation.

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -5,7 +5,7 @@
   text-align: right;
   padding: 16px 36px;
   background-color: var(--color-secondary);
-  width: 100%;
+  width: 100vw;
   
   .subtitle {
     text-align: left;
