--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -6,7 +6,7 @@
   z-index: 500;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: var(--navigation-height);
   padding: 0 var(--pad-xl);
   background-color: var(--color-background);
